CommitBody css: fixed alignment of commit small text

--- a/src/components/CommitBody/CommitBody.scss
+++ b/src/components/CommitBody/CommitBody.scss
@@ -43,7 +43,6 @@
     .commit-small-texts{
         display: flex;
         flex-direction: row;
-        justify-content: center;
     }
 
     .committed-ago {
